--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1><b>Muhmmad Aqib</b></h1>
+     <center><h1><b>Muhmmad Aqib</b></h1></center>
     <p>House No. 275/76 , sector 11 baba wilayat Ali shah Colony orangi town</p>
     <hr>
     <h2>Career Objective:</h2>
@@ -31,13 +31,14 @@
     <ul>
         <li>
             01 year worked experience in <b>KIA Lucky Motors</b> as a <b>RE&C.</b>
-            03 year worked experience in <b>Marketing line</b>as a <b>salesman.</b>
-            01 year experience as a <b>Computer Operator. </b>
-            01 year worked experience as a <b>Assistant Accountaint at S.S Marketing&#40;Distribution&#41;</b>
-
-
-
         </li>
+           <li> 03 year worked experience in <b>Marketing line</b>as a <b>salesman.</b></li>
+            <li>01 year experience as a <b>Computer Operator. </b></li>
+            <li>01 year worked experience as a <b>Assistant Accountaint at S.S Marketing&#40;Distribution&#41;</b></li>
+
+
+
+        
 
 
     </ul>
